--- a/.github/workflows/merged.yml
+++ b/.github/workflows/merged.yml
@@ -18,4 +18,4 @@ jobs:
   check-if-merged:
     runs-on: ubuntu-latest
     steps:
-    - uses: CareMessagePlatform/check-if-merged@v2
+    - uses: CareMessagePlatform/check-if-merged@master
