--- a/.github/workflows/merged.yml
+++ b/.github/workflows/merged.yml
@@ -18,4 +18,10 @@ jobs:
   check-if-merged:
     runs-on: ubuntu-latest
     steps:
-    - uses: CareMessagePlatform/check-if-merged@master
+    - name: Check merged
+    # You may pin to the exact commit or the version.
+    # uses: SonicGarden/check-merged-action@b4333ae5642cbb543794c8077e0837bdeb7dc32e
+      uses: SonicGarden/check-merged-action@v1.3.1
+      with:
+        # Github token
+        token: ${{ secrets.GITHUB_TOKEN }}
